tests/NormalTests/paczka1/fuzzy1/65936689.err
Error in line 6: eJq0b S343 91,5
Error in line 37: S291 S343 -3,9
